<resources>
    <string name="app_name">Pet store</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="hint_email">Email</string>
    <string name="hint_uname">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="buy_pet">BUY</string>


</resources>
